[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["pravboi <pravachanpatra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pyzmq = "^26.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pathlib = "^1.0.1"
requests = "^2.32.3"
pyarrow = "^16.1.0"
tqdn = "^0.2.1"
plotly = "^5.22.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
optuna = "^3.6.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
hopsworks = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
