[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["pravboi <pravachanpatra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pyzmq = "^26.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pathlib = "^1.0.1"
requests = "^2.32.3"
pyarrow = "^16.1.0"
tqdn = "^0.2.1"
plotly = "^5.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
